<resources>
    <string name="app_name">Symptomator</string>
    <string name="symptom">Symptoms</string>
    <string name="hospital">Hospital details</string>
    <string name="about">About</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="symptom_header">Check yourself\nBefore you wreck yourself</string>
    <string-array name="body_parts">
        <item>Concerned body area</item>
        <item>Head area</item>
        <item>Chest area</item>
        <item>Abdomen</item>
        <item>Back area</item>
        <item>Pelvic area</item>
        <item>Arm</item>
        <item>Legs</item>
    </string-array>
    <string-array name="head_area">
        <item>Select body part from head area</item>
        <item>Head</item>
        <item>Eyes</item>
        <item>Nose</item>
        <item>Face</item>
        <item>Ears</item>
        <item>Mouth</item>
        <item>Jaw</item>
        <item>Neck</item>
    </string-array>
    <string-array name="chest_area">
        <item>Select body part from chest area</item>
        <item>Chest</item>
        <item>Side of chest</item>
        <item>Sternum</item>
    </string-array>
    <string-array name="abdomen">
        <item>Select body part from abdomen</item>
        <item>Upper abdomen</item>
        <item>Lower abdomen</item>
    </string-array>
    <string-array name="back_area">
        <item>Select body part from back area</item>
        <item>Back</item>
        <item>Upper spine</item>
        <item>Lower spine</item>
    </string-array>
    <string-array name="pelvic">
        <item>Select body part from pelvic area</item>
        <item>Pelvis</item>
        <item>Genitals</item>
        <item>Buttock</item>
        <item>Hip</item>
        <item>Groin</item>
    </string-array>
    <string-array name="arm">
        <item>Select body part from arm</item>
        <item>Shoulder</item>
        <item>Armpit</item>
        <item>Upper arm</item>
        <item>Elbow</item>
        <item>Fore arm</item>
        <item>Wrist</item>
        <item>Hand</item>
        <item>Fingers</item>
    </string-array>
    <string-array name="legs">
        <item>Select body part from legs</item>
        <item>Thigh</item>
        <item>Hamstring</item>
        <item>Knee</item>
        <item>Back of knee</item>
        <item>Shin</item>
        <item>Calf</item>
        <item>Ankle</item>
        <item>Foot</item>
        <item>Toes</item>
        <item>Sole</item>
    </string-array>
    <string name="get_to_the_nearest_hospital">Get to the nearest hospital</string>
    <string name="doctor">Doctor details</string>
    <string name="first_aid_info">First aid info</string>
    <string name="services">Services</string>
    <string name="developers">Developers</string>
    <string name="facebook_handles">Facebook handles\n(click on name to open profile)</string>
    <string name="developer_prem_suman">Prem Suman\t\t(@PremSuman8)</string>
    <string name="developer_prem_ankur">Prem Ankur\t\t(@Prem.Ankur.14)</string>
    <string name="developer_vikash">Vikash Kumar\t\t(@VikashRuhelaCSE)</string>
    <string name="developer_prateek">Prateek Sen\t\t(@Prateek.Sen.118)</string>
    <string name="contributors">Contributors</string>
    <string name="about_the_app">About the App</string>
    <string name="about_the_app_details">
        Symptomator is a medical app designed to fulfil all your medical needs.
        \n\nThis app packs the following features:
        \n\t\t•\tSymptom checker
        \n\t\t•\tFirst aid information
        \n\t\t•\tMedical Services
    </string>
    <string name="symptom_checker">Symptom Checker</string>
    <string name="symptom_checker_details">Check symptoms and view possible conditions by choosing your concerned body part.</string>
    <string name="first_aid_info_details">Get all the first aid information you need, right under your fingertips.</string>
    <string name="find_nearby_doctors_details">Find the registered doctors within 10 Km (6 miles) around you.
        \n\nClick on a Marker to view the doctor\'s details, such as the phone number, address, location and website</string>
    <string name="find_nearby_hospitals_details">Find the registered hospitals within 10 Km (6 miles) around you.
        \n\nClick on a Marker to view the hospital\'s details, such as the phone number, address, location and website</string>
    <string name="get_to_nearest_hospital_details">Get directions to the registered hospital nearest to you.
        \n(uses Google Maps)</string>
    <string name="get_to_nearest_doctor_details">Get directions to the registered doctor nearest to you.
        \n(uses Google Maps)</string>
    <string name="call_emergency_services_details">Call your national Emergency number in one click,
        wherever you see the circular call button with a cross inside.</string>
    <string name="prembros">PremBros</string>
    <string name="visit_us_at">Visit us at:</string>
    <string name="call_emergency_services">Call Emergency services</string>
    <string name="get_to_the_nearest_doctor">Get to the nearest doctor</string>
    <string name="find_nearby_hospitals">Find nearby hospitals</string>
    <string name="find_nearby_doctors">Find nearby doctors</string>
</resources>