<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="invisible"
    android:id="@+id/about_container"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorDisabledLight"
    tools:context=".MainActivity"
    tools:ignore="Overdraw">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/app_name"
            android:textColor="@color/colorSecondaryText" />
        
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="25dp"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:background="@drawable/button_white_default">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/about_the_app"
                android:textColor="@color/colorSecondaryText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorDividerLight" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/about_the_app_details"
                android:textColor="@color/colorSecondaryText"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="25dp"

            android:background="@drawable/button_white_default">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/symptom_checker"
                android:textColor="@color/colorSecondaryText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorDividerLight" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/symptom_checker_details"
                android:textColor="@color/colorSecondaryText"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/first_aid_info"
                android:textColor="@color/colorSecondaryText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorDividerLight" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/first_aid_info_details"
                android:textColor="@color/colorSecondaryText"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:padding="@dimen/activity_horizontal_margin"
            android:text="@string/services"
            android:textColor="@color/colorSecondaryText" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/button_white_default">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:drawableEnd="@drawable/ic_call_emergency_services_about"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/call_emergency_services"
                android:textColor="@color/colorSecondaryText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:background="@color/colorDividerLight" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/call_emergency_services_details"
                android:textColor="@color/colorSecondaryText"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@color/colorDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:drawableEnd="@drawable/ic_doctor_about"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/find_nearby_doctors"
                android:textColor="@color/colorSecondaryText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:background="@color/colorDividerLight" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/find_nearby_doctors_details"
                android:textColor="@color/colorSecondaryText"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@color/colorDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:drawableEnd="@drawable/ic_hospital_about"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/find_nearby_hospitals"
                android:textColor="@color/colorSecondaryText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:background="@color/colorDividerLight" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/find_nearby_hospitals_details"
                android:textColor="@color/colorSecondaryText"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@color/colorDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:drawableEnd="@drawable/ic_marker_doctor_grey"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/get_to_the_nearest_doctor"
                android:textColor="@color/colorSecondaryText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:background="@color/colorDividerLight" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/get_to_nearest_doctor_details"
                android:textColor="@color/colorSecondaryText"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@color/colorDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                android:drawableEnd="@drawable/ic_marker_hospital_grey"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/get_to_the_nearest_hospital"
                android:textColor="@color/colorSecondaryText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:background="@color/colorDividerLight" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:text="@string/get_to_nearest_hospital_details"
                android:textColor="@color/colorSecondaryText"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="25dp"
            android:background="@drawable/button_white_default">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/developers"
                android:textColor="@color/colorSecondaryText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="0dp"
                android:text="@string/facebook_handles"
                android:textColor="@color/colorSecondaryText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:background="@color/colorDividerLight" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/developer_prem_suman"
                android:textColor="@color/colorSecondaryText"
                android:autoLink="web"
                android:onClick="goToPremSuman"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/developer_prem_ankur"
                android:textColor="@color/colorSecondaryText"
                android:autoLink="web"
                android:onClick="goToPremAnkur"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@color/colorDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/visit_us_at"
                android:textColor="@color/colorSecondaryText"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/PremBros_link"
                android:textStyle="bold"
                android:autoLink="web"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="40sp"
                android:text="@string/prembros"
                android:onClick="goToPremBros"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@color/colorDivider" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:text="@string/contributors"
                android:textColor="@color/colorSecondaryText" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:background="@color/colorDividerLight" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/developer_vikash"
                android:textColor="@color/colorSecondaryText"
                android:autoLink="web"
                android:onClick="goToVikash"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/developer_prateek"
                android:textColor="@color/colorSecondaryText"
                android:autoLink="web"
                android:onClick="goToPrateek"
                android:textSize="18sp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="150dp" />

    </LinearLayout>

</ScrollView>